[2단계 - 자동차 경주 리팩토링] 엔델(김민준) 미션 제출합니다 (#559)
* refactor: ui 패키지를 view 패키지로 변경

* refactor: 매직넘버 제거

* refactor: 핵심 로직을 가진 RacingGame 객체를 domain 패키지로 이동

* test: 자동차 이동 횟수를 경곗값 위주로 테스트

* refactor: 랜덤숫자 생성기를 util 패키지로 옮기고 static으로 변환

* refactor: 인텔리제이 경고 부분 수정